Realização de alguns testes com o HTML

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             -->
 
-            <img src="./assets/menu-button-of-three-horizontal-lines.png" alt="icone de menu com três riscos" class="menuinicial"><a href="https://www.flaticon.com/free-icon/menu-button-of-three-horizontal-lines_56763?term=menu&page=1&position=5&origin=search&related_id=56763"></a>
+            <img src="./assets/menuicon.png" alt="icone de menu com três riscos" class="menuinicial"><a href="https://www.flaticon.com/free-icon/menu-button-of-three-horizontal-lines_56763?term=menu&page=1&position=5&origin=search&related_id=56763"></a>
            <!-- <input type="checkbox" class="menu-hamburguer">
             <label class="checkbox-menu">
                 <span></span>
