Redefinição de uma tag

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <header>
-        <figure>
+        <figure class="container">
             <!--<img src="./assets/icone-usuario.png" alt="circulo roxo contendo um desenho em verde água que simboliza uma pessoa em seu interior" class="usuario"><a href="https://www.flaticon.com/br/icone-gratis/do-utilizador_8509176?term=pessoas&page=1&position=16&origin=tag&related_id=8509176"></a>        -->
             <img src="./assets/businesnews.png" alt="logotipo escrito business news em roxo e verde água" class="logo-header">
         </figure>
-        <div class="container">      
+        <figure class="container">      
             <img src="./assets/icone-usuario.png" alt="circulo roxo contendo um desenho em verde água que simboliza uma pessoa em seu interior" class="usuario"><a href="https://www.flaticon.com/br/icone-gratis/do-utilizador_8509176?term=pessoas&page=1&position=16&origin=tag&related_id=8509176"></a>
             <!--
             <div class="banner">
@@ -31,7 +31,7 @@
                 <span></span>
             </label>
         -->
-        </div>
+        </figure>
         <div class="acessibilidade">
             <button type="button" name="leitor" class="leitor">Leitor automático</button>
             <button type="button" name="aumenta-letra" class="maiuscula">A+</button>
