Criação de algumas classes para estilização dos elementos no css

--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
         </div>
     </header>
     <main>
-        <figure>
-            <img src="./assets/Frame.png" alt="celular branco com a imagem do aplicatico do business news">
+        <figure class="container-celular">
+            <img src="./assets/Frame.png" alt="celular branco com a imagem do aplicatico do business news" class="celular">
             <div class="lojasapp">
                 <img src="./assets/googleplay.png" class="googleplay" alt="logotipo com os dizeres 'disponível no google play' ">
                 <img src="./assets/appstore.png" class="applestore" alt="logotipo play store">
-                <!--falta colocar o logo da app store-->
             </div>
         </figure>
         <div>
