Ajustes no formulário

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
         <div class="formulario">
             <form method="post">
                 <fieldset>
-                    <p>Quer ter o <strong>BN</strong> na sua empresa?</p>
-                    <p>Fale com o time comercial</p>
+                    <p class="frase1"><b>Quer ter o <strong>BN</strong> na sua empresa?</b></p>
+                    <p class="frase2">Fale com o time comercial</p>
                 </fieldset>
                 <fieldset>
                     <label>Nome*</label>
@@ -102,26 +102,26 @@
                     <textarea name="mensagem" class="textfield" cols="20" rows="10"></textarea>
                 </fieldset>
                 <fieldset>    
-                    <label><strong>contato@businessapp.com.br</strong></label>
+                    <label class="emailcontato"><strong>contato@businessapp.com.br</strong></label>
                 </fieldset>
                 <fieldset>
-                    <legend>Aceita promoções e anúncios de nossos parceiros?</legend>
-                    <div>
+                    <legend class="anuncios">Aceita promoções e anúncios de nossos parceiros?</legend>
+                    <div class="checkboxemail">
                         <input type="checkbox" name="email">
                         <label>E-mail</label>
                     </div>
-                    <div>
+                    <div class="checkboxwhatsapp">
                         <input type="checkbox" name="whatsapp">
                         <label>WhatsApp</label>
                     </div>
                 </fieldset>
                 <fieldset>
-                    <div>
+                    <div class="termos">
                         <input type="checkbox" name="termos">
                         <label>Concordo com os Termos de Uso e Política de Privacidade*</label>
                     </div>
                 </fieldset>
-                <button formenctype="text/plain" name="enviar" type="submit">Enviar</button>
+                <button formenctype="text/plain" class="botaoenviar" name="enviar" type="submit">Enviar</button>
             </form>
         </div>
     </main>
