--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <figure class="container-celular">
             <img src="./assets/Frame.png" alt="celular branco com a imagem do aplicatico do business news" class="celular">
             <div class="lojasapp">
-                <img src="./assets/googleplay.png" class="googleplay" alt="logotipo com os dizeres 'disponível no google play' ">
-                <img src="./assets/appstore.png" class="applestore" alt="logotipo play store">
+                <a href="https://play.google.com/store/apps/details?id=br.com.businessapp&hl=pt&gl=US"><img src="./assets/googleplay.png" class="googleplay" alt="logotipo com os dizeres 'disponível no google play' "></a>
+                <a href="https://apps.apple.com/br/app/business-news/id1546248277"><img src="./assets/appstore.png" class="applestore" alt="logotipo play store"></a>
             </div>
         </figure>
         <div>
@@ -98,10 +98,11 @@
                     
                     <input type="text" class="textfield" name="whatsapp" placeholder="WhatsApp*">
                     
-                    <textarea name="mensagem" class="textfield" cols="20" rows="10" placeholder="Digite sua mensagem aqui"></textarea>
+                    <textarea name="mensagem" style="resize: none" class="textfield" cols="20" rows="10" placeholder="Digite sua mensagem aqui"></textarea>
                 </fieldset>
-                <fieldset class="caixaemail">    
-                    <label class="emailcontato">contato@businessapp.com.br</label>
+                <fieldset class="caixaemail">  
+                    <a href="mailto:contato@businessnews.com.br" class="mailto">contato@businessapp.com.br</a>  
+                    <!--<label class="emailcontato">contato@businessapp.com.br</label>-->
                 </fieldset>
                 <fieldset>
                     <legend class="anuncios">Aceita promoções e anúncios de nossos parceiros?</legend>
