--- a/index.html
+++ b/index.html
@@ -126,24 +126,23 @@
         </figure>
     </main>
     <footer>
-        <div class="menu">
-            <ul>
-            <li>Menu</li>
-            <li>Suporte</li>
-            <li>About</li> 
+        <div class="menu-footer">
+            <ul class="lista-um-footer">
+                <li>Menu</li>
+                <li>Suporte</li>
+                <li>About</li> 
             </ul>
-            <ul>
+            <ul class="lista-dois-footer">
                 <li>Termos de Uso</li>
                 <li>Política de Privacidade</li>
             </ul>
         </div>
         <figure class="socialmedia">
-            <img src="./assets/facebook.png" class="facebook" alt="logotipo redondo azul com uma letra f branca representando o símbolo do facebook"><a href="https://www.flaticon.com/br/icone-gratis/facebook_145802?term=facebook&page=1&position=6&origin=search&related_id=145802" title="facebook ícones"></a>
-            <img src="./assets/instagram.png" class="instagram" alt="logotipo rosa, amarelo e laranja quadrado, dividido em um retângulo na parte superior e um circulo no centro do retângulo inferior, representando o símbolo do instagram"><a href="https://www.flaticon.com/br/icone-gratis/instagram_3670125?term=instagram&page=1&position=34&origin=search&related_id=3670125" title="instagram ícones"></a>
-            <img src="./assets/twitter.png" class="twitter" alt="fundo azul claro com um passarinho branco no meio representando o símbolo do twitter"><a href="https://www.flaticon.com/br/icone-gratis/twitter_3670151?term=twitter&page=1&position=2&origin=search&related_id=3670151" title="logotipo do twitter ícones"></a>
-            <img src="./assets/linkedin.png" class="linkedin" alt="fundo azul com as letras l e n em branco, representando o símbolo do linkedin"><a href="https://www.flaticon.com/br/icone-gratis/linkedin_145807?term=linkedin&page=1&position=2&origin=search&related_id=145807"></a>
-            <img src="./assets/email.png" class="email" alt="envelope desenhado em roxo e preenchimento branco com um símbolo de @ (arroba) na ponta inferior direita"><a href="https://www.flaticon.com/br/icone-gratis/o-email_482138?term=email&page=1&position=2&origin=search&related_id=482138" title="o email ícones"></a>
-            <a href="mailto:contato@businessnews.com.br">Fale conosco</a>
+            <a href="https://pt-br.facebook.com"><img src="./assets/facebook.png" class="facebook" alt="logotipo redondo azul com uma letra f branca representando o símbolo do facebook"></a><a href="https://www.flaticon.com/br/icone-gratis/facebook_145802?term=facebook&page=1&position=6&origin=search&related_id=145802" title="facebook ícones"></a>
+            <a href="https://www.instagram.com"><img src="./assets/instagram.png" class="instagram" alt="logotipo rosa, amarelo e laranja quadrado, dividido em um retângulo na parte superior e um circulo no centro do retângulo inferior, representando o símbolo do instagram"></a><a href="https://www.flaticon.com/br/icone-gratis/instagram_3670125?term=instagram&page=1&position=34&origin=search&related_id=3670125" title="instagram ícones"></a>
+            <a href="https://twitter.com"><img src="./assets/twitter.png" class="twitter" alt="fundo azul claro com um passarinho branco no meio representando o símbolo do twitter"></a><a href="https://www.flaticon.com/br/icone-gratis/twitter_3670151?term=twitter&page=1&position=2&origin=search&related_id=3670151" title="logotipo do twitter ícones"></a>
+            <a href="https://www.linkedin.com/in"><img src="./assets/linkedin.png" class="linkedin" alt="fundo azul com as letras l e n em branco, representando o símbolo do linkedin"></a><a href="https://www.flaticon.com/br/icone-gratis/linkedin_145807?term=linkedin&page=1&position=2&origin=search&related_id=145807"></a>
+            <a href="mailto:contato@businessnews.com.br"><img src="./assets/email.png" class="email" alt="envelope desenhado em roxo e preenchimento branco com um símbolo de @ (arroba) na ponta inferior direita"></a><a href="https://www.flaticon.com/br/icone-gratis/o-email_482138?term=email&page=1&position=2&origin=search&related_id=482138" title="o email ícones"></a>
         </figure>
         <div>
             <button type="button" class="botaovoltar">Voltar ao início</button>
