Alteração na política de privacidade no footer

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </ul>
             <ul class="lista-dois-footer">
                 <li>Termos de Uso</li>
-                <li>Política de Privacidade</li>
+                <li>Privacidade</li>
             </ul>
         </div>
         <figure class="socialmedia">
