Alteração no nome da classe do botão e no seu conteúdo

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <a href="mailto:contato@businessnews.com.br"><img src="./assets/email.png" class="email" alt="envelope desenhado em roxo e preenchimento branco com um símbolo de @ (arroba) na ponta inferior direita"></a><a href="https://www.flaticon.com/br/icone-gratis/o-email_482138?term=email&page=1&position=2&origin=search&related_id=482138" title="o email ícones"></a>
         </figure>
         <div>
-            <button type="button" class="botaovoltar">Voltar ao início</button>
+            <button type="button" class="botao-voltar">VOLTAR AO FORMULÁRIO</button>
         </div>
         <div>
             &COPY;
