Mudança na posição do botão voltar

--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
         </figure>
     </main>
     <footer>
+        <div>
+            <button type="button" class="botao-voltar">VOLTAR AO FORMULÁRIO</button>
+        </div>
         <div class="menu-footer">
             <ul class="lista-um-footer">
                 <li>Menu</li>
@@ -167,13 +170,12 @@
             <a href="https://www.linkedin.com/in"><img src="./assets/linkedin.png" class="linkedin" alt="fundo azul com as letras l e n em branco, representando o símbolo do linkedin"></a><a href="https://www.flaticon.com/br/icone-gratis/linkedin_145807?term=linkedin&page=1&position=2&origin=search&related_id=145807"></a>
             <a href="mailto:contato@businessnews.com.br"><img src="./assets/email.png" class="email" alt="envelope desenhado em roxo e preenchimento branco com um símbolo de @ (arroba) na ponta inferior direita"></a><a href="https://www.flaticon.com/br/icone-gratis/o-email_482138?term=email&page=1&position=2&origin=search&related_id=482138" title="o email ícones"></a>
         </figure>
-        <div>
-            <button type="button" class="botao-voltar">VOLTAR AO FORMULÁRIO</button>
-        </div>
+        <figure>
+            <img src="./assets/logo.jpeg" class="logobn" alt="logotipo com as letras b e n em roxo e verde água, respectivamente">
+        </figure>
         <div>
             &COPY;
             Copyright, 2023
-            <img src="./assets/logo.jpeg" class="logobn" alt="logotipo com as letras b e n em roxo e verde água, respectivamente">
         </div>
     </footer>
     <script type="text/javascript" src="script.js"></script>
