Nova classe botao-footer

--- a/index.html
+++ b/index.html
@@ -57,11 +57,7 @@
     <main>
         <div class="caixa-titulo">
             <h1 class="titulo"> BUSINESS NEWS </h1>
-        </div>
-        
-
-        
-
+        </div>     
         <div class="texto-principal">
             <section>
                 <h3>
@@ -149,7 +145,7 @@
         </figure>
     </main>
     <footer>
-        <div>
+        <div class="botao-footer">
             <button type="button" class="botao-voltar">VOLTAR AO FORMULÁRIO</button>
         </div>
         <div class="menu-footer">
