Ajustando as frases do site

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
     <main>
         <div class="caixa-titulo">
             <h1 class="titulo"> BUSINESS NEWS </h1>
+            <h2 class="titulo-2"> O melhor APP de notícias para a sua EMPRESA</h2>
+            
+            
         </div>     
         <div class="texto-principal">
             <section>
@@ -92,6 +95,11 @@
                 </ul>                
             </section>            
         </div>
+
+        <div class="frase3">
+            <h3>Ao responder o formulário ganhe 7 dias de TESTE!</h3>
+        </div>
+
         <div class="formulario">
             <form method="post">
                 <fieldset>
@@ -136,6 +144,11 @@
                 <button formenctype="text/plain" class="botaoenviar" name="enviar" type="submit">Enviar</button>
             </form>
         </div>
+
+        <div class="frase4">
+            <h2>Após responder o formulário baixe o APP e aproveite seus 7 dias de teste!</h2>
+        </div>
+
         <figure class="container-celular">
             <img src="./assets/Frame.png" alt="celular branco com a imagem do aplicatico do business news" class="celular">
             <div class="lojasapp">
