Add ID para habilitar a funcionalidade do botão

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <h3>Ao responder o formulário ganhe 7 dias de TESTE!</h3>
         </div>
 
-        <div class="formulario">
+        <div id="forms" class="formulario">
             <form method="post">
                 <fieldset>
                     <p class="frase1"><b>Quer ter o <strong>BN</strong> na sua empresa?</b></p>
@@ -159,7 +159,7 @@
     </main>
     <footer>
         <div class="botao-footer">
-            <button type="button" class="botao-voltar">VOLTAR AO FORMULÁRIO</button>
+            <a href="#forms"><button type="button" class="botao-voltar">VOLTAR AO FORMULÁRIO</button></a>
         </div>
         <div class="menu-footer">
             <ul class="lista-um-footer">
