--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./assets/logo.jpeg">
+    <script type="text/javascript" src="script.js" defer></script>
     <title>Business News</title>        
 </head>
 <body>
@@ -157,6 +158,5 @@
             Copyright, 2023
         </div>
     </footer>
-    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
