Adicionando itens no menu

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                     <button type="button" name="leitor" class="leitor">Leitor automático</button>
                     <button type="button" name="aumenta-letra" class="maiuscula">A+</button>
                     <button type="button" name="diminui-letra" class="minuscula">a-</button>
+
+                    <a href="#forms" onclick="closeNav()">Formulário</a>
+                    <a href="#redes-sociais" onclick="closeNav()">Redes Sociais</a>
+                    <a href="#conheca-app" onclick="closeNav()">Baixar APP</a>
                 </div>
             </div>
             <button type="button" class="nav-button" onclick="openNav()">
@@ -108,7 +112,7 @@
                 <button formenctype="text/plain" class="botaoenviar" name="enviar" type="submit">Enviar</button>
             </form>
         </div>
-        <div class="frase4">
+        <div id="conheca-app" class="frase4">
             <h2>Após responder o formulário baixe o APP e aproveite seus 7 dias de teste!</h2>
         </div>
         <figure class="container-celular">
@@ -133,7 +137,7 @@
                 <li>Termos de Uso</li>
                 <li>Privacidade</li>
             </ul>
-            <div class="socialmedia">
+            <div id="redes-sociais" class="socialmedia">
                 <figure>
                     <a href="https://pt-br.facebook.com"><img src="./assets/facebook.png" class="facebook" alt="logotipo redondo azul com uma letra f branca representando o símbolo do facebook"></a><a href="https://www.flaticon.com/br/icone-gratis/facebook_145802?term=facebook&page=1&position=6&origin=search&related_id=145802" title="facebook ícones"></a>
                     <a href="https://www.instagram.com"><img src="./assets/instagram.png" class="instagram" alt="logotipo rosa, amarelo e laranja quadrado, dividido em um retângulo na parte superior e um circulo no centro do retângulo inferior, representando o símbolo do instagram"></a><a href="https://www.flaticon.com/br/icone-gratis/instagram_3670125?term=instagram&page=1&position=34&origin=search&related_id=3670125" title="instagram ícones"></a>
