Corrigindo o botão voltar

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </main>
     <footer>
         <div class="botao-footer">
-            <nav href="#forms"><button type="button" class="botao-voltar">VOLTAR AO FORMULÁRIO</button></nav>
+            <a href="#forms-1" class="botao-voltar">VOLTAR AO FORMULÁRIO</a>
         </div>
         <div class="menu-footer">
             <ul class="lista-um-footer">
