Criação da classe copyright

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <img src="./assets/logo.jpeg" class="logobn" alt="logotipo com as letras b e n em roxo e verde água, respectivamente">
             </figure>
         </div>    
-        <div>
+        <div class="copyright">
             &COPY;
             Copyright, 2023
         </div>
