Alteração da frase de impacto e no prêmio

--- a/index.html
+++ b/index.html
@@ -36,45 +36,18 @@
     </header>
     <main>
         <div class="caixa-titulo">
-            <h1 class="titulo"> BUSINESS NEWS </h1>
+            <h1 class="titulo"><strong>BUSINESS NEWS</strong></h1>
             <h2 class="titulo-2"> O melhor APP de notícias para a sua EMPRESA</h2>   
         </div>     
         <div class="texto-principal">
             <section>
                 <h3>
-                    AS PRINCIPAIS NOTÍCIAS
-                </h3>
-                <ul>
-                    <li>As capas dos principais jornais do país</li>
-                    <li>Atualizações em tempo real</li>
-                    <li>Todos os destaques da semana</li>
-                </ul>                
-            </section>
-            <section>
-                <h3>
-                    INFORMAÇÕES RELEVANTES
-                </h3>
-                <ul>
-                    <li>Mercado</li>
-                    <li>Aportes</li>
-                    <li>Editoriais</li>
-                    <li>Vídeos</li>
-                    <li>Dicas BN</li>
-                    <li>E muito mais</li>
-                </ul>                
-            </section>
-            <section>
-                <h3>
-                    CALENDÁRIO
-                </h3>    
-                <ul>
-                    <li>Principais eventos, lançamentos e inalgurações</li>
-                    <li>Organizados dia-a-dia em um só lugar</li>
-                </ul>                
+                    Está cansado de ter que procurar várias fontes para obter informações confiáveis? Só app da BN reúne as melhores fontes em um só lugar.
+                </h3>                
             </section>            
         </div>
         <div class="frase3">
-            <h3>Ao responder o formulário ganhe 7 dias de TESTE!</h3>
+            <h3>Ao responder o formulário ganhe 7 dias de ASSINATURA PREMIUM do <strong>app da BN</strong> para testar em todos os seus dispositivos!</h3>
         </div>
         <div id="forms-1" class="formulario">
             <form method="post">
