Ajuste da segunda frase e campos obrigatórios

--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                         <input type="checkbox" name="termos">
                         <label>Concordo com os Termos de Uso e Política de Privacidade*</label>
                     </div>
+                    <div class="caixaemail">
+                        <p>*Campos <b>obrigatórios</b></p>
+                    </div>
                 </fieldset>
                 <button formenctype="text/plain" class="botaoenviar" name="enviar" type="submit">Enviar</button>
             </form>
