--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </section>            
         </div>
         <div class="frase3">
-            <h3>Ao responder o formulário ganhe 7 dias de ASSINATURA PREMIUM do <strong>app da BN</strong> para testar em todos os seus dispositivos!</h3>
+            <h3>Ao responder o formulário ganhe 7 dias de ASSINATURA PREMIUM do <strong>APP da BN</strong> para testar em todos os seus dispositivos!</h3>
         </div>
         <div id="forms-1" class="formulario">
             <form method="post">
@@ -86,6 +86,9 @@
                 <button formenctype="text/plain" class="botaoenviar" name="enviar" type="submit">Enviar</button>
             </form>
         </div>
+        <div>
+            <a href="https://video.wixstatic.com/video/09c2ff_c0c01c2939c94d1db06de1b998c7c0a6/720p/mp4/file.mp4" class="botao-video"><b>ACESSE NOSSO VÍDEO</b></a>
+        </div>
         <div id="conheca-app" class="frase4">
             <h2>Após responder o formulário baixe o APP e aproveite seus 7 dias de teste!</h2>
         </div>
@@ -96,6 +99,12 @@
                 <a href="https://apps.apple.com/br/app/business-news/id1546248277"><img src="./assets/appstore.png" class="applestore" alt="logotipo play store"></a>
             </div>
         </figure>
+        <a href=""></a>
+        <section>
+            <h3>
+                A informação nunca foi tão importante. Esteja sempre um passo à frente com nosso aplicativo de notícias.
+            </h3>
+        </section>
     </main>
     <footer>
         <div class="botao-footer">
