Criação de nova classe

--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
                 <a href="https://apps.apple.com/br/app/business-news/id1546248277"><img src="./assets/appstore.png" class="applestore" alt="logotipo play store"></a>
             </div>
         </figure>
-        <a href=""></a>
-        <section>
+        <section class="frase-final">
             <h3>
                 A informação nunca foi tão importante. Esteja sempre um passo à frente com nosso aplicativo de notícias.
             </h3>
