Novas classes html e estilização no css

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     <main>
         <div class="caixa-titulo">
             <h1 class="titulo"><strong>BUSINESS NEWS</strong></h1>
-            <h2 class="titulo-2"> O melhor APP de notícias para a sua EMPRESA</h2>   
+            <h2 class="titulo-2"> O melhor <strong>APP de notícias</strong> para a sua <strong>EMPRESA</strong></h2>   
         </div>     
         <div class="texto-principal">
             <section>
                 <h3>
-                    Está cansado de ter que procurar várias fontes para obter informações confiáveis? Só app da BN reúne as melhores fontes em um só lugar.
+                    Está cansado de ter que procurar várias fontes para obter informações confiáveis? Só <strong>App da BN</strong> reúne as melhores fontes em um só lugar.
                 </h3>                
             </section>            
         </div>
@@ -89,7 +89,7 @@
                 <button formenctype="text/plain" class="botaoenviar" name="enviar" type="submit">Enviar</button>
             </form>
         </div>
-        <div>
+        <div class="video">
             <a href="https://video.wixstatic.com/video/09c2ff_c0c01c2939c94d1db06de1b998c7c0a6/720p/mp4/file.mp4" class="botao-video"><b>ACESSE NOSSO VÍDEO</b></a>
         </div>
         <div id="conheca-app" class="frase4">
@@ -102,11 +102,13 @@
                 <a href="https://apps.apple.com/br/app/business-news/id1546248277"><img src="./assets/appstore.png" class="applestore" alt="logotipo play store"></a>
             </div>
         </figure>
-        <section class="frase-final">
-            <h3>
-                A informação nunca foi tão importante. Esteja sempre um passo à frente com nosso aplicativo de notícias.
-            </h3>
-        </section>
+        <div class="frase-final">
+            <section>
+                <h3>
+                    A informação nunca foi tão importante. Esteja sempre um passo à frente com nosso aplicativo de notícias.
+                </h3>
+            </section>
+        </div>
     </main>
     <footer>
         <div class="botao-footer">
