--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="media-query.css">
     <link rel="icon" href="./assets/logo.jpeg">
     <script type="text/javascript" src="script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Business News</title>        
 </head>
 <body>
@@ -118,7 +121,7 @@
             <ul class="lista-um-footer">
                 <li>Menu</li>
                 <li>Suporte</li>
-                <li>About</li> 
+                <li>Sobre</li> 
             </ul>
             <ul class="lista-dois-footer">
                 <li>Termos de Uso</li>
