Atribuição de id ao botão enviar do forms e outrs alterações no forms

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h3>Ao responder o formulário ganhe 7 dias de ASSINATURA PREMIUM do <strong>APP da BN</strong> para testar em todos os seus dispositivos!</h3>
         </div>
         <div id="forms-1" class="formulario">
-            <form method="post">
+            <form>
                 <fieldset>
                     <p class="frase1"><b>Quer ter o <strong>BN</strong> na sua empresa?</b></p>
                     <p class="frase2">Fale com o time comercial</p>
@@ -89,7 +89,7 @@
                         <p>*Campos <b>obrigatórios</b></p>
                     </div>
                 </fieldset>
-                <button formenctype="text/plain" class="botaoenviar" name="enviar" onclick="enviarForms()">Enviar</button>
+                <button formenctype="text/plain" id="enviarEmail" class="botaoenviar" name="enviar" type="submit">Enviar</button>
             </form>
         </div>
         <div class="video">
