--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                     <p class="frase2">Fale com o time comercial</p>
                 </fieldset>
                 <fieldset>
-                    <input type="text" id="nome" class="textfield" name="nome" aria-label="nome" placeholder="Nome">                    
-                    <input type="text" id="empresa" class="textfield" name="empresa"aria-label="empresa" placeholder="Empresa*">                    
+                    <input type="text" id="nome" class="textfield" name="nome" aria-label="nome" placeholder="Nome" required>                    
+                    <input type="text" id="empresa" class="textfield" name="empresa"aria-label="empresa" placeholder="Empresa*" required>                    
                     <input type="text" id="setor" class="textfield" name="setor" aria-label="setor" placeholder="Setor">                    
-                    <input type="email" id="email" class="textfield" name="email" aria-label="email" placeholder="E-mail*">                    
-                    <input type="number" id="campoNumero" class="textfield" name="whatsapp" aria-label="whatsapp" placeholder="WhatsApp*">                    
+                    <input type="email" id="email" class="textfield" name="email" aria-label="email" placeholder="E-mail*" required>                    
+                    <input type="number" id="campoNumero" class="textfield" name="whatsapp" aria-label="whatsapp" placeholder="WhatsApp*" required>                    
                     <textarea name="mensagem" id="mensagem" style="resize: none" class="textfield" cols="20" rows="10" placeholder="Digite sua mensagem aqui"></textarea>
                 </fieldset>
                 <fieldset class="caixaemail">  
@@ -82,7 +82,7 @@
                 </fieldset>
                 <fieldset>
                     <div class="termos">
-                        <input type="checkbox" aria-label="termos" name="termos">
+                        <input type="checkbox" aria-label="termos" name="termos" required>
                         <label>Concordo com os Termos de Uso e Política de Privacidade*</label>
                     </div>
                     <div class="caixaemail">
