Ajustes no carrossel

--- a/carousel.html
+++ b/carousel.html
@@ -15,7 +15,9 @@
         <div class="carousel__slider">
           <ul class="carousel__list">
             <li class="carousel__item">
-              <span>1</span>
+              <span>
+                <img width="110px" src="assets/facebook.png" alt="">
+              </span>
             </li>
             <li class="carousel__item">
               <span>2</span>
