--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
         </figure>
         <div class="frase-final">
-            <section>
+            <section class="section-frase-carousel">
                 <h3>
                     A informação nunca foi tão importante. Esteja sempre um passo à frente com nosso aplicativo de notícias.
                 </h3>
