Ajustes gerais de espaçamento

--- a/index.html
+++ b/index.html
@@ -106,6 +106,17 @@
                 <a href="https://apps.apple.com/br/app/business-news/id1546248277"><img src="./assets/appstore.png" class="applestore" alt="logotipo play store"></a>
             </div>
         </figure>
+
+        <div class="video">
+            <video width="620" height="420" muted="true" loop="true" controls="controls" autoplay="autoplay">
+              <source src="assets/file.mp4">
+              <object data="" width="320" height="240">
+              <embed width="320" height="240" src="assets/file.mp4">
+              </object>
+              </video>
+            <!-- <a href="https://video.wixstatic.com/video/09c2ff_c0c01c2939c94d1db06de1b998c7c0a6/720p/mp4/file.mp4">Vídeo</a> -->
+          </div>  
+
         <div class="frase-final">
             <section class="section-frase-carousel">
                 <h3>
