Inclusão de id no header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Business News</title>        
 </head>
 <body>
-    <header>
+    <header id="screen">
         <div class="container">      
             <div id="myNav" class="overlay">
                 <a href="javascript:void(0)" class="closebtn" id="fechar-menu">&times;</a>
