Adição de mais linhas a lista e imagens novas

--- a/carousel.html
+++ b/carousel.html
@@ -9,8 +9,6 @@
     <script type="text/javascript" src="./carrossel/script-carousel.js" defer></script>
 </head>
 <body>
-    
-    
     <section class="carousel">
         <div class="carousel__slider">
           <ul class="carousel__list">
@@ -20,19 +18,69 @@
               </span>
             </li>
             <li class="carousel__item">
-              <span>2</span>
+              <span>
+                <img width="110px" src="assets/android.png" alt="">
+              </span>
             </li>
             <li class="carousel__item">
-              <span>3</span>
+              <span>
+                <img width="110px" src="assets/apple.png" alt="">
+              </span>
             </li>
             <li class="carousel__item">
-              <span>4</span>
+              <span>
+                <img width="110px" src="assets/citibank.png" alt="">
+              </span>
             </li>
             <li class="carousel__item">
-              <span>5</span>
+              <span>
+                <img width="110px" src="assets/flickr.png" alt="">
+              </span>
             </li>
             <li class="carousel__item">
-              <span>6</span>
+              <span>
+                <img width="110px" src="assets/google.png" alt="">
+              </span>
+            </li>
+            <li class="carousel__item">
+              <span>
+                <img width="110px" src="assets/hsbc.png" alt="">
+              </span>
+            </li>
+            <li class="carousel__item">
+              <span>
+                <img width="110px" src="assets/netflix.png" alt="">
+              </span>
+            </li>
+            <li class="carousel__item">
+              <span>
+                <img width="110px" src="assets/payoneer.png" alt="">
+              </span>
+            </li>
+            <li class="carousel__item">
+              <span>
+                <img width="110px" src="assets/snapchat.png" alt="">
+              </span>
+            </li>
+            <li class="carousel__item">
+              <span>
+                <img width="110px" src="assets/spotify.png" alt="">
+              </span>
+            </li>
+            <li class="carousel__item">
+              <span>
+                <img width="110px" src="assets/tik-tok.png" alt="">
+              </span>
+            </li>
+            <li class="carousel__item">
+              <span>
+                <img width="110px" src="assets/visa.png" alt="">
+              </span>
+            </li>
+            <li class="carousel__item">
+              <span>
+                <img width="110px" src="assets/windows.png" alt="">
+              </span>
             </li>
           </ul>
         </div>
