Ajuste botão vídeo

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <button formenctype="text/plain" id="enviarEmail" class="botaoenviar" name="enviar" type="submit">Enviar</button>
             </form>
         </div>
-        <div class="video">
+        <div class="btn-video">
             <a href="https://video.wixstatic.com/video/09c2ff_c0c01c2939c94d1db06de1b998c7c0a6/720p/mp4/file.mp4" class="botao-video"><b>ACESSE NOSSO VÍDEO</b></a>
         </div>
         <div id="conheca-app" class="frase4">
