--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
                 <h3>
                     A informação nunca foi tão importante. Esteja sempre um passo à frente com nosso aplicativo de notícias.
                 </h3>
+                <h2>
+                    Confira nossos parceiros!
+                </h2>
                 <div class="carousel-container">
                     <iframe src="carousel.html"></iframe>
                 </div>
